opam-version: "2.0"
maintainer: "Hannes Mehnert <hannes@mehnert.org>"
authors: "Hannes Mehnert <hannes@mehnert.org>"
license: "BSD-2-Clause"
homepage: "https://github.com/hannesm/ocaml-otr"
doc: "https://hannesm.github.io/ocaml-otr/doc"
bug-reports: "https://github.com/hannesm/ocaml-otr/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "dune"
  "cstruct" {>= "6.0.0"}
  "sexplib0"
  "mirage-crypto"
  "mirage-crypto-pk"
  "astring"
  "rresult"
  "base64" {>= "3.1.0"}
  "mirage-crypto-rng" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/hannesm/ocaml-otr.git"
synopsis: "Off the record implementation purely in OCaml"
description: """
This is an implementation of version 2 and 3 of the Off-the-record
protocol (https://otr.cypherpunks.ca/Protocol-v3-4.0.0.html) in OCaml.

Including the socialist millionairs protocol to authenticate a
communication partner over an encrypted channel providing a shared
secret.
"""
